Basic implemenation of verifying the otp on BE
